# lrcget

./: .editorconfig  .prettierignore  .prettierrc  AGENTS.md  Dockerfile  LICENSE  LRCLIB_LYRICSFILE_PLAN.md  LYRICSFILE_CONCEPT.md  LYRICS_EXPORT_PLAN.md  MY_LRCLIB_REWORK_PLAN.md  README.md  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.js
.changeset/: every-roses-end.md
.github/: FUNDING.yml
.github/workflows/: publish.yml  release-winget.yml
mockup/: edit-lyrics-mockup.html
packaging/linux/: LRCGET.desktop  LRCGET.metainfo.xml
src/: ARCHITECTURE.md  App.vue  EDIT_LYRICS_REFACTORING_PLAN.md  EDIT_LYRICS_V2_PUBLISH_PLAN.md  EDIT_LYRICS_V2_WORD_SYNC.md  EDIT_LYRICS_V2_WORD_SYNC_PLAN.md  ICONS_REFACTOR_PLAN.md  main.js  style.css
src-tauri/: AGENTS.md  ARCHITECTURE.md  Cargo.toml  FS_REFACTORING_PLAN.md  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/icons/macos/: icon.icns
src-tauri/migrations/01-initial/: up.sql
src-tauri/migrations/02-add_lyrics_and_indexes/: up.sql
src-tauri/migrations/03-add_instrumental/: up.sql
src-tauri/migrations/04-add_lower_columns/: up.sql
src-tauri/migrations/05-add_track_number_and_config/: up.sql
src-tauri/migrations/06-update_lyrics_skip_config/: up.sql
src-tauri/migrations/07-add_show_line_count/: up.sql
src-tauri/migrations/08-add_scan_fields/: up.sql
src-tauri/migrations/09-add_lyricsfiles/: up.sql
src-tauri/migrations/10-add-lyrics-presence-flags/: up.sql
src-tauri/migrations/11-add_volume_config/: up.sql
src-tauri/migrations/12-add_lrclib_columns/: up.sql
src-tauri/migrations/13-add-lyrics-presence-to-lyricsfiles/: up.sql
src-tauri/migrations/14-migrate-lyrics-presence-to-lyricsfiles/: up.sql
src-tauri/migrations/15-add_album_artist_track_indexes/: up.sql
src-tauri/migrations/16-add_fts5_search/: up.sql
src-tauri/migrations/17-add_spectrogram_visible_config/: up.sql
src-tauri/src/: db.rs  decoder.rs  export.rs  fs_track.rs  library.rs  lrclib.rs  lyrics.rs  lyricsfile.rs  main.rs  persistent_entities.rs  player.rs  state.rs  utils.rs  word_segmentation.rs
src-tauri/src/lrclib/: challenge_solver.rs  flag.rs  get.rs  get_by_id.rs  mod.rs  publish.rs  request_challenge.rs  search.rs
src-tauri/src/parser/: lrc.rs  mod.rs
src-tauri/src/scanner/: hasher.rs  metadata.rs  mod.rs  models.rs  scan.rs
src/components/: About.vue  ApplyLyrics.vue  ChooseDirectory.vue  CopyablePre.vue  Library.vue  NowPlaying.vue  SelectStrategy.vue
src/components/common/: BaseModal.vue  CheckboxButton.vue  ConfirmModal.vue  RadioButton.vue
src/components/icons/: EqualEnter.vue  Equalizer.vue
src/components/now-playing/: LyricsViewer.vue  PlainLyricsViewer.vue  Seek.vue  VolumeSlider.vue
src/components/ui/: BaseModal.vue  DropdownButton.vue  DropdownItem.vue
src/composables/: downloader.js  edit-lyrics-v2.js  edit-lyrics.js  export.js  global-state.js  library-navigation.js  player.js  search-library.js  search-lyrics.js  search.js
src/composables/edit-lyrics/: shiftSelectedTimestamps.js  useLyricsDocument.js  useLyricsEditorCommands.js  useLyricsEditorHotkeys.js  useLyricsPlaybackSync.js  useLyricsPublish.js
src/composables/edit-lyrics-v2/: keyboardShortcuts.js  shortcutRegistry.js  useEditLyricsV2Document.js  useEditLyricsV2Export.js  useEditLyricsV2Hotkeys.js  useEditLyricsV2Playback.js  useEditLyricsV2Publish.js  useEditLyricsV2SyncedHotkeys.js  useEditLyricsV2SyncedInlineEditing.js  useEditLyricsV2SyncedInsertHover.js  useEditLyricsV2WordBoundaryDrag.js  useEditLyricsV2WordTimingHotkeys.js
src/ts-utils/: utils.ts
src/utils/: count-lines.js  human-duration.js  lyrics-lint.js  lyrics.js  lyricsfile.js  plain-text-lint.js  romanization.js  romanization.test.js  word-tokenizer.js  word-tokenizer.test.js
tools/: README.md  generate_fake_music.py  requirements.txt
