[package]
authors = ["tranxuanthang"]
description = "Utility for mass-downloading LRC synced lyrics for your offline music library."
edition = "2021"
license = "MIT"
name = "lrcget"
repository = "https://github.com/tranxuanthang/lrcget"
rust-version = "1.81"
version = "0.9.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "2", features = []}

[dependencies]
anyhow = "1.0.89"
collapse = "0.1.2"
data-encoding = "2.4.0"
globwalk = "0.9.1"
indoc = "2"
kira = "0.9.5"
lofty = "0.21.1"
lrc = "0.1.8"
rayon = "1.10.0"
regex = "1.10.4"
reqwest = {version = "0.12.7", features = ["json"]}
ring = "0.17.12"
rusqlite = {version = "0.32.1", features = ["bundled"]}
secular = {version = "1.0.1", features = ["bmp", "normalization"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
symphonia = {version = "0.5.4", features = ["all"]}
tauri = {version = "2", features = ["protocol-asset", "devtools"]}
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2.2.1"
thiserror = "1.0"
tokio = {version = "1.44", features = ["full"]}

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.dev.package.kira]
opt-level = 3

[profile.dev.package.cpal]
opt-level = 3

[profile.dev.package.symphonia]
opt-level = 3

[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3

[profile.dev.package.symphonia-format-ogg]
opt-level = 3

[profile.dev.package.symphonia-codec-vorbis]
opt-level = 3

[profile.dev.package.symphonia-bundle-flac]
opt-level = 3

[profile.dev.package.symphonia-codec-pcm]
opt-level = 3

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
