[package]
name = "lrcget"
version = "2.0.0"
description = "Utility for mass-downloading LRC synced lyrics for your offline music library."
authors = ["tranxuanthang"]
license = "MIT"
repository = "https://github.com/tranxuanthang/lrcget"
edition = "2021"
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tauri = { version = "2.10.1", features = [ "protocol-asset", "devtools"] }
globwalk = "0.9.1"
reqwest = { version = "0.12.7", features = ["json"] }
lofty = "0.24.0"
anyhow = "1.0.89"
thiserror = "1.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
rusqlite_migration = { version = "1.3.1", features = ["from-directory"] }
include_dir = "0.7.4"
secular = { version="1.0.1", features= ["bmp", "normalization"] }
collapse = "0.1.2"
rayon = "1.10.0"
indoc = "2"
tokio = { version = "1.40", features = ["full"] }
ring = "0.17.8"
data-encoding = "2.4.0"
kira = "0.12.0"
symphonia = { version = "0.5.4", features = ["all"] }
regex = "1.10.4"
lrc = "0.1.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
tauri-plugin-os = "2.3.2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.7.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.dev.package.kira]
opt-level = 3

[profile.dev.package.cpal]
opt-level = 3

[profile.dev.package.symphonia]
opt-level = 3

[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3

[profile.dev.package.symphonia-format-ogg]
opt-level = 3

[profile.dev.package.symphonia-codec-vorbis]
opt-level = 3

[profile.dev.package.symphonia-bundle-flac]
opt-level = 3

[profile.dev.package.symphonia-codec-pcm]
opt-level = 3

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.1"
